--- a/Alli-1a10.html
+++ b/Alli-1a10.html
@@ -277,146 +277,90 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="甜槠-细柄蕈树群团" class="section level2">
+<h2><span style="color: blue;">甜槠-细柄蕈树群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+<div id="castanopsis-eyrei-liquidambar-altingia-gracilipes-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
+eyrei</em>-<em>Liquidambar</em> (<em>Altingia</em>) <em>gracilipes</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>细柄蕈树、甜槠</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：少叶黄杞（<em>Engelhardia
+fenzelii</em>）、轮叶蒲桃（<em>Syzygium
+grijsii</em>）、刨花润楠（<em>Machilus
+pauhoi</em>）、鹿角锥（<em>Castanopsis
+lamontii</em>）、毛锥（<em>Castanopsis
+fordii</em>），以及红楠（<em>Machilus thunbergii</em>）等</p></li>
+<li><p>灌木层：毛冬青（<em>Ilex
+pubescens</em>）、刺毛杜鹃（<em>Rhododendron championae</em>）</p></li>
+<li><p>草本层：黑莎草（<em>Gahnia tristis</em>）、里白（<em>Hicriopteris
+glauca</em>）等</p></li>
+<li><p>藤本植物：网脉酸果藤（<em>Embelia
+rudis</em>）、瓜馥木（<em>Fissistigma oldhamii</em>）等</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含12个群落" class="section level3">
+<h3>目前包含12个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
-Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<li><p>(C1) 箬叶竹-苦竹/细柄蕈树群落（<em>Indocalamus
+longiauritus</em>-<em>Pleioblastus amarus</em>/<em>Altingia
+gracilipes</em> Comm.）</p>
+<p>分布在福建南平（EBLF书中表5-94a/3；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
+<li><p>(C2) 孝顺竹群落-苦竹/细柄蕈树群落（<em>Bambusa multiplex</em>
+-<em>Pleioblastus amarus</em>/<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建南平（EBLF书中表5-94a/1；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
+<li><p>(C3) 曲竿竹-少叶黄杞/细柄蕈树群落（<em>Altingia
+gracilipes</em>-<em>Engelhardia fenzelii</em>-<em>Phyllostachys
+flexuosa</em> Comm.）</p>
+<p>分布在福建邵武。（EBLF书中表5-94a/2；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
+<li><p>(C4) 芒萁-少叶黄杞/细柄蕈树群落（<em>Dicranopteris
+dichotoma</em>-<em>Engelhardia fenzelii</em>/<em>Altingia
+gracilipes</em> Comm.）</p>
+<p>分布在浙江松阳。（EBLF书中表5-94b；曾称：少叶黄杞∕细柄蕈树群落)</p></li>
+<li><p>(C5) 紫金牛-刺毛杜鹃/甜槠-细柄蕈树群落(<em>Ardisia
+japonica</em>-<em>Rhododendron championae</em>/<em>Castanopsis
+eyrei</em> -<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/5；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C6) 狗脊-野牡丹-轮叶蒲桃/细柄蕈树群落（<em>Woodwardia
+japonica</em>-<em>Melastoma candidum</em>-<em>Syzygium grijsii</em>/
+<em>Altingia gracilipes</em> Comm.)</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/4；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C7) 虎舌红-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Ardisia
+mamillata</em>-<em>Syzygium grijsii</em>/<em>Castanopsis eyrei</em>
+-<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/3；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C8) 小果山龙眼-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Helicia
+cochinchinensis</em>-<em>Syzygium grijsii</em>/<em>Castanopsis
+eyrei</em> -<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/1；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C9) 青果榕-轮叶蒲桃/甜槠-细柄蕈树群落（<em>Ficus variegata</em>
+var. <em>chlorocarpa</em>-<em>Syzygium grijsii</em> /<em>Castanopsis
+eyrei</em>-<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建野梁山（EBLF书中表5-96；曾称：青果榕-绢毛杜英∕细柄蕈树群落)</p></li>
+<li><p>(C10) 地菍-毛竹/甜槠-细柄蕈树群落（<em>Malastoma
+dodecandrum</em>-<em>Phyllostachys heterocycla</em> cv.
+<em>Pubescens</em>/<em>Castanopsis eyrei</em>-<em>Altingia
+gracilipes</em> Comm.）</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/2;
+曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C11) 弯蒴杜鹃-轮叶蒲桃/钩锥-细柄蕈树-群落（<em>Rhododendron
+henryi</em>-<em>Syzygium grijsii</em>/<em>Castanopsis tibetana</em>
+-<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建梅花山（EBLF书中表5-95a/6；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
+<li><p>(C12) 里白-鲫鱼胆/甜槠-细柄蕈树群落（<em>Hicriopteris
+glauca</em>-<em>Maesa perlarius</em>/<em>Castanopsis
+eyrei</em>-<em>Altingia gracilipes</em> Comm.）</p>
+<p>分布在福建宁德（EBLF书中表5-95b；曾称：轮叶蒲桃-刺毛杜鹃∕细柄蕈树群落)</p></li>
 </ul>
 </div>
 </div>
