--- a/Alli-1a12.html
+++ b/Alli-1a12.html
@@ -277,146 +277,88 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="钩锥群团" class="section level2">
+<h2><span style="color: blue;">钩锥群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
-class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
-<hr>
+<div id="castanopsis-tibetana-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Castanopsis tibetana</em>
+All.</span></h2>
+<p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>钩锥，可作为鉴别种和主要伴生种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：红楠（<em>Machilus
+thunbergii</em>）、赤杨叶（<em>Alniphyllum
+fortunei</em>）、猴欢喜（<em>Sloanea sinensis</em>）,鼠刺(<em>Itea
+chinensis</em>)</p></li>
+<li><p>灌木层：黄丹木姜子（<em>Litsea elongata</em>）、杜茎山（<em>Maesa
+japonica</em>）、红茴香（<em>Illicium henryi</em>），栀子（<em>Gardenia
+jasminoides</em>）</p></li>
+<li><p>草本层：狗脊（<em>Woodwardia
+japonica</em>）、淡竹叶（<em>Lophatherum
+gracile</em>），中华复叶耳蕨（<em>Arachniodes
+chinensis</em>）、山姜（<em>Alpinia japonica</em>）等</p></li>
+<li><p>藤本植物：野木瓜（<em>Stauntonia
+chinensis</em>），珍珠莲（<em>Ficus sarmentosa</em> var.
+<em>henryi</em>），尖叶菝葜（<em>Smilax arisanensis</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含11个群落" class="section level3">
+<h3>目前包含11个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
+<li><p>(C1）阔鳞鳞毛蕨-阔叶箬竹-枫香/钩锥群落(<em>Dryopteris
+championii</em> -<em>Indocalamus latifolius</em>-<em>Liquidambar
+formosana</em>/<em>Castanopsis tibetana</em> Comm.)</p>
+<p>分布在杭州（EBLF书中表5-72；曾称：阔叶箬竹/ 钩锥群落)</p></li>
+<li><p>(C2) 多羽复叶耳蕨-尖连蕊茶-猴欢喜/钩锥群落（<em>Arachniodes
+amoena</em> -<em>Camellia cuspidata</em>-<em>Sloanea
+sinensis</em>/<em>Castanopsis tibetana</em> Comm.)</p>
+<p>分布在浙江龙泉（EBLF书中表5-73；曾称：尖连蕊茶-猴欢喜/钩锥群落)</p></li>
+<li><p>(C3) 山姜-鲫鱼胆-深山含笑/钩锥群落(<em>Alpinia
+japonica</em>-<em>Maesa perlarius</em>-<em>Michelia
+maudiae</em>/<em>Castanopsis tibetana</em> Comm.)</p>
+<p>分布在福建永安,引自：《福建天宝岩自然保护区考察报告》（林鹏，2002）中“钩栲-箬竹-山姜群丛”,(（EBLF书中表5-74/1;曾称：少叶黄杞-深山含笑/钩锥群落)</p></li>
+<li><p>(C4) 狗脊-水团花-水青冈/ 钩锥群落 (<em>Schefflera
+delavayi</em>-<em>Engelhardtia fenzelii</em>/<em>Castanopsis
+tibetana</em>+<em>Michelia maudiae</em>-<em>Woodwardia japonica</em>
+Comm.)</p>
+<p>分布在福建武平梁野山，引自：《福建梁野山自然保护区考察报告》（林鹏，2001）中“钩栲-箬竹-狗脊群丛”，(EBLF书中表5-74/2；曾称：少叶黄杞-深山含笑/钩锥群落,
+从其中分出)</p></li>
+<li><p>(C5）狗脊-柃木-黄绒润楠/钩锥群落(<em>Woodwardia
+japonica</em>-<em>Eurya japonica</em>-<em>Machilus
+grijsii</em>/<em>Castanopsis tibetana</em> Comm.)</p>
+<p>分布在江西井冈山，引自《江西森林》（江西森林编委会，1985）中“钩栲+罗浮栲-杜茎山-狗脊群丛”（EBLF书中表5-75；曾称：杜茎山-黄绒润楠/
+钩锥群落)</p></li>
+<li><p>(C6) 狗脊-箬竹-紫楠/钩锥群落（<em>Woodwardia
+japonica</em>-<em>Indocalamus tessellatus</em>-<em>Phoebe
+sheareri</em>/<em>Castanopsis tibetana</em>）</p>
+<p>分布在湖南浏阳大围山，引自：《湖南植被》（祁承经，1990）中“大叶钩栲-箬竹-狗脊群落”（EBLF书中表5-77/1；曾称：湖南、湖北以钩锥为优势种的群落</p></li>
+<li><p>(C7) 黄杞/栲树-钩锥/群落（<em>Engelhardia
+roxburghiana</em>/<em>Castanopsis tibetana</em>）</p>
+<p>分布在湖北利川星斗山，引自：《湖北森林》（湖北森林编委会，1991），中“锥栗+丝栗栲群系”，（EBLF书中表5-77/2；曾称：湖南、湖北以钩锥为优势种的群落</p></li>
+<li><p>(C8) 柏拉木-闽粤石楠/钩锥群落（<em>Blastus
+cochinchinensis</em>-<em>Photinia benthamiana</em>/<em>Castanopsis
+tibetana</em> Comm.）</p>
+<p>分布在广东始兴、南雄、乳源,（EBLF书中表5-76；曾称：柏拉木-闽粤石楠 /
+钩锥群落)</p></li>
+<li><p>(C9）金毛狗-大叶水团花/钩锥群落（<em>Cibotium
+barometz</em>-<em>Adina polycephala</em>/<em>Castanopsis tibetana</em>
 Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<p>分布在广西贺县，引自：《广西植被志要》书中表W5.115-116，原称：？？？（王献溥等，2001）</p></li>
+<li><p>(C10）东方乌毛蕨-广东杜鹃/钩锥群落（<em>Cibotium
+barometz</em>-<em>Rhododendron kwangtungense</em>/<em>Castanopsis
+tibetana</em> Comm.）</p>
+<p>分布在广西贺县，引自：《广西植被志要》书中表号W5.117-118，原称：？？？（王献溥等，2001）</p></li>
+<li><p>(C11）中华复叶耳蕨-小果石笔木/钩锥群落（<em>Arachniodes
+chinensis</em>- <em>Tutcheria microcarpa</em>/<em>Castanopsis
+tibetana</em> Comm.）</p>
+<p>分布在广西金秀，引自《广西植被》书中表格号S9.63-64；原称：？？？（苏宗明等，2001）</p></li>
 </ul>
 </div>
 </div>
