--- a/Alli-1a13.html
+++ b/Alli-1a13.html
@@ -277,146 +277,109 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="毛锥-鹿角锥-罗浮锥群团" class="section level2">
+<h2><span style="color: blue;">毛锥-鹿角锥-罗浮锥群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+<div id="castanopsis-fordii-c.-lamontii-c.-fabri-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
-<hr>
+<h2><span style="color: darkblue;"><em>Castanopsis fordii</em>-<em>C.
+lamontii</em>-<em>C. fabri</em> All.</span></h2>
+<p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>罗浮锥、鹿角锥和毛锥，三者有时混生</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：红楠（<em>Machilus
+thunbergii</em>）、黄杞（<em>Engelhardia
+roxburghiana</em>），鹅掌柴（<em>Schefflera
+octophylla</em>），黄丹木姜子（<em>Litsea
+elongata</em>）、罗浮柿（<em>Diospyros morrisiana</em>），鼠刺（<em>Itea
+chinensis</em>）</p></li>
+<li><p>灌木层：杜茎山（<em>Maesa japonica</em>），草珊瑚（<em>Sarcandra
+glabra</em>）朱砂根（<em>Ardisia
+crenata</em>），以及遍南方分布的九节木（<em>Psychotria
+rubra</em>）、罗伞树（<em>Ardisia quinquegona</em>）</p></li>
+<li><p>草本层：狗脊（<em>Woodwardia japonica</em>）、十字薹草（<em>Carex
+cruciata</em>），淡竹叶（<em>Lophatherum
+gracile</em>），艳山姜（<em>Alpinia
+zerumbet</em>），金毛狗（<em>Cibotium barometz</em>）</p></li>
+<li><p>藤本植物：既有菝葜（<em>Smilax
+china</em>）、络石（<em>Trachelospermum
+jasminoides</em>），藤黄檀（<em>Dalbergia
+hancei</em>）；又有南方分布的瓜馥木（<em>Fissistigma
+oldhamii</em>）、网脉酸藤子（<em>Embelia rudis</em>）等</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含22个群落" class="section level3">
+<h3>目前包含22个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
+<li><p>(C1）长蕊杜鹃/罗浮锥群落(<em>Rhododendron
+stamineum</em>/<em>Castanopsis fabri</em> Comm.)</p>
+<p>分布在湖南城步（EBLF书中表5-84；曾称：长蕊杜鹃/罗浮锥群落)</p></li>
+<li><p>(C2) 华里白-轮叶蒲桃/罗浮锥群落(<em>Hicriopteris
+chinensis</em>-<em>Syzygium grijsii</em>/<em>Castanopsis fabri</em>
+Comm.)</p>
+<p>分布在福建天宝岩（EBLF书中表5-81; 曾称：轮叶蒲桃/罗浮锥群落)</p></li>
+<li><p>(C3) 八瓣糙果茶 -刺毛杜鹃/罗浮锥群落(<em>Camellia octopetala</em>
+-<em>Rhododendron henryi</em>/<em>Castanopsis fabri</em> Comm.)</p>
+<p>分布在福建屏南,引自：《福建森林》（福建森林编委会）??，（EBLF书中表5-82;
+曾称：弯蒴杜鹃/罗浮锥群落)</p></li>
+<li><p>(C4) 厚叶鼠刺/罗浮锥群落(<em>Pteris insignis</em>-<em>Itea
+coriacea</em>/ <em>Castanopsis fabri</em> Comm.)</p>
+<p>分布在广西花坪（EBLF书中表5-85/1; 曾称：厚叶鼠刺
+/罗浮锥群落)</p></li>
+<li><p>(C5）中华石楠/罗浮锥群落(<em>Dryopteris
+sparsa</em>-<em>Lasianthus longicauda</em>/<em>Castanopsis fabri</em>
+Comm..)</p>
+<p>分布在广西兴安猫儿山（EBLF书中表5-85/2；曾称：中华石楠/罗浮锥群落)</p></li>
+<li><p>(C6) 稀疏鳞毛蕨-鸭公树∕罗浮锥群落(D<em>ryopteris
+sparsa</em>-<em>Neolitsea chuii</em>-<em>Castanopsis fabri</em>
+Comm.)</p>
+<p>分布在广西灵川潮田（EBLF书中表5-85/3；曾称：鸭公树/罗浮锥群落)</p></li>
+<li><p>(C7) 青果榕-密花树∕罗浮锥群落（<em>Ficus variegata
+</em>var.<em>chlorocarpa</em>-<em>Rapanea
+neriifolia</em>/<em>Castanopsis fabri</em> Comm.）</p>
+<p>分布在香港（EBLF书中表8-22/1-2）;
+曾称：青果榕-密花树∕罗浮锥群落)</p></li>
+<li><p>(C8) 毛萼红果树-香花枇杷/西南木荷-罗浮锥群落（<em>Stranvaesia
+amphidoxa</em>-<em>Eriobotrya fragrans</em>/<em>Schima
+wallichii</em>-<em>Castanopsis fabri</em> Comm.）</p>
+<p>分布在广西田阳，（EBLF书中表8-24; 曾称：罗伞树-西南木荷/罗浮锥群落,
+从季节常绿阔叶林中移来)</p></li>
+<li><p>(C9）桃叶石楠-密花树∕米槠-罗浮锥群落（<em>Photinia
+prunifolia</em>-<em>Rapanea neriifolia</em>/<em>Castanopsis
+carlesii</em> -<em>Castanopsis fabri</em> Comm.）</p>
+<p>分布在广东南昆山（EBLF书中表8-23; 曾称：密花树/鹿角锥群落)</p></li>
+<li><p>(C10）九管血-马尾松/鹿角锥-罗浮锥群落(<em>Ardisia
+brevicaulis</em>-<em>Castanopsis fabri</em>+<em>Castanopsis
+lomontii</em>- <em>Daphniphyllum glaucesens</em>-<em>Woodwardia
+japonica</em> Comm.)</p>
+<p>分布在江西井冈山（原书表5-83; 曾称：虎皮楠/罗浮锥群落)</p></li>
+<li><p>(C11）里白-鹿角杜鹃 /鹿角锥群落(<em>Hicriopteris glauca</em>-
+<em>Rhododendron latoucheae</em>/<em>Castanopsis lomontii</em>
+Comm.)</p>
+<p>分布在浙江泰顺（EBLF书中表8-79）(曾称：刺毛杜鹃/鹿角锥群落)</p></li>
+<li><p>(C12）红盖鳞毛蕨-草珊瑚 /鹿角锥群落(<em>Dryopteris
+erythrosora</em> -<em>Sarcandra glabra</em>/<em>Castanopsis
+lamontii</em> Comm.)</p>
+<p>分布在江西井冈山（EBLF书中表5-80）(曾称：草珊瑚-杜茎山/鹿角锥群落)</p></li>
+<li><p>(C13）鹅掌柴-蒲桃/ 鹿角锥群落（<em>Schefflera
+octophylla</em>-<em>Syzygium jambos</em>/<em>Castanopsis lamontii</em>
 Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<p>香港（EBLF书中表8-22/3; 曾称：蒲桃-鹅掌柴/鹿角锥群落)</p></li>
+<li><p>(C14) 草珊瑚-长瓣金花树/毛锥群落(<em>Sarcandra
+glabra</em>-<em>Blastus apricus</em> var.
+<em>longiflorus</em>/<em>Castinopsis fordii</em> Comm.)</p>
+<p>分布在江西安远（EBLF书中表5-87; 曾称：刺毛杜鹃/鹿角锥群落)。</p></li>
+<li><p>(C15）刚竹-毛冬青∕毛锥群落(<em>Phyllostachys sulphurea
+cv.viridis</em>-<em>Ilex pubescens</em>/<em>Castanopsis fordii
+</em>Comm.)</p>
+<p>分布在福建三明（EBLF书中表8-86; 曾称：刺毛杜鹃/鹿角锥群落)</p></li>
 </ul>
 </div>
 </div>
