--- a/Alli-2a42.html
+++ b/Alli-2a42.html
@@ -277,146 +277,107 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="西南木荷-印锥-红锥群团" class="section level2">
+<h2><span style="color: blue;">西南木荷-印锥-红锥群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+<div id="schima-wallichii-castanopsis-indica-c.-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
+<h2><span style="color: darkblue;"><em>Schima
+wallichii</em>-<em>Castanopsis indica</em>-<em>C. hystrix</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>红锥(<em>Castanopsis
+hystrix</em>)、印锥、西南木荷、截果柯（<em>Lithocarpus
+truncatus</em>）、小果锥（<em>Castanopsis fleuryi</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：密花树（<em>Rapanea
+neriifolia</em>）、粗叶水锦树（<em>Wendlandia
+scabra</em>）、毛木荷（<em>Schima villosa</em>）、滇南木姜子（<em>Litsea
+garrettii</em>）、耳叶柯（<em>Lithocarpus
+grandifolius</em>）、滇南木姜子（<em>Litsea
+garrettii</em>）、云南蒲桃（<em>Syzygium yunnanense</em>）</p></li>
+<li><p>灌木层：岗柃（<em>Eurya groffii</em>）、鹧鸪花（<em>Trichilia
+connaroides</em>）、三桠苦（<em>Evodia
+lepta</em>）、毛果算盘子（<em>Glochidion
+eriocarpum</em>）、毛银柴（<em>Aporusa
+villosa</em>）、草鞋木（<em>Macaranga henryi</em>）</p></li>
+<li><p>草本层：药囊花（<em>Cyphotheca
+montana</em>）、矮箬竹（<em>Indocalamus
+pedalis</em>）、滑竹（<em>Shibataea
+chinensis</em>）景东瘤足蕨（<em>Plagiogyria
+coerulescens</em>）、黑鳞珍珠茅（<em>Scleria hookeriana</em>）</p></li>
+<li><p>藤本植物：记录不多，见有：买麻藤（<em>Gnetum
+montanum</em>）、长尾红叶藤（<em>Rourea
+caudata</em>）、粉背菝葜（<em>Smilax
+hypoglauca</em>）、长托菝葜（<em>Smilax
+ferox</em>）、蕗蕨一种（<em>Mecodium</em> sp.）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含8个群落" class="section level3">
+<h3>目前包含8个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
+<li><p>(C1）药囊花-多果新木姜子/红锥群落（<em>Cyphotheca
+montana</em>-<em>Neolitsea polycarpa</em>/<em>Castanopsis hystrix</em>
 Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<p>分布于景东无量山。引自：《景东无量山自然保护区植被调查》一文中的
+“刺栲-山肿药群落”（<em>Castanopsis hystrix</em>-<em>Cyphotheca
+montana</em>
+Comm.）（云南大学生态地植物学研究室，1960）（EBLF书中表8-36∕1,曾称：针齿铁仔-多果新木姜子/多种柯-红锥群落）</p></li>
+<li><p>(C2）滑竹-坚木山矾/野八角-西南木荷群落（<em>Shibataea
+chinensis</em>-<em>Symplocos dryophila</em>/<em>Illicium
+simonsii</em>-<em>Schima wallichii</em> Comm.）</p>
+<p>分布于景东无量山。引自《景东无量山自然保护区植被调查》中的
+“西南木荷+滇八角-滑竹+小金竹群落”（<em>Schima
+wallichii</em>+<em>Illicium simonsii</em>-<em>Shinatala
+chinensis</em>+<em>Indcalamus pedolis</em>
+Comm.）（云南大学生态地植物学研究室，1960）（EBLF书中表8-36∕2，曾称：坚木山矾∕野八角-西南木荷群落）</p></li>
+<li><p>(C3) 糙叶大沙叶-闽粤石楠/毛木荷-红锥群落（<em>Pavetta
+scabrifolia</em>-<em>Photinia benthamiana</em>/<em>Schima
+villosa</em>-<em>Castanopsis hystrix</em> Comm.）</p>
+<p>分布于勐海县盆地边缘。引自《云南植被》中的“红锥、毛木荷群落”（<em>Castanopsis
+hystrix</em>, <em>Schima villosa</em> Comm.) （云南植被编写组,
+1987）（EBLF书中表8-37∕1，曾称：闽粤石楠/毛木荷-红锥群落）</p></li>
+<li><p>(C4) 黑鳞珍珠-滇白珠-深绿山龙眼/红锥群落（<em>Scleria
+hookeriana</em>-<em>Gaultheria leucocarpa</em> var.
+<em>Crenulata</em>-<em>Helicia nilagirica</em>/<em>Castanopsis
+hystrix</em> Comm.）</p>
+<p>分布于思茅、普洱、澜沧、双江、镇越。引自《云南植被》一书中的“刺栲、小果石栎、红木荷群落”（<em>Castanopsis
+hystrix</em>，<em>Lithocarpus microspermus</em>，<em>Schima
+wallichii</em> Comm.）（云南植被编写组,
+1987）（EBLF书中表8-37∕2-3，曾称：深绿山龙眼-小果柯/西南木荷群落）</p></li>
+<li><p>(C5）齿缘吊钟花-深绿山龙眼∕红锥-短刺锥群落（E<em>nkianthus
+serrulatus</em>-<em>Helicia nilagirica</em>/<em>Castanopsis
+hystrix</em>-<em>Castanopsis echidnocarpa</em> Comm.）</p>
+<p>分布于思茅、普洱、澜沧、双江、镇越。引自《云南植被》一书中的“刺栲、小果石栎、红木荷群落”（<em>Castanopsis
+hystrix</em>，<em>Lithocarpus microspermus</em>，<em>Schima
+wallichii</em> Comm.）（云南植被编写组,
+1987）（EBLF书中表8-37∕2-3，曾称：深绿山龙眼-小果柯/西南木荷群落）</p></li>
+<li><p>(C6) 茶梨-毛枝柯/红锥-短穗泥柯群落（<em>Anneslea
+fragrans</em>-<em>Lithocarpus fenestratus</em> var.
+<em>Brachycarpus</em>/<em>Castanopsis hystrix</em>-<em>Lithocarpus
+fenestratus</em> var. <em>brachycarpus</em> Comm.）</p>
+<p>西双版纳、临沧和德宏等地。引自《云南植被》中的“刺栲、印栲群落”（<em>Castanopsis
+hystrix</em> , <em>Castanopsis
+indica</em>）（云南植被编写组，1987）（EBLF书中表8-37∕4，曾称：茶梨/红锥-印锥群落）</p></li>
+<li><p>(C7) 深绿山龙眼/小果锥-截果柯群落（<em>Helicia
+nilagirica</em>/<em>Castanopsis fleuryi</em>-<em>Lithocarpus
+truncates</em> Comm.）</p>
+<p>分布于云县、景东、镇源、峨山、新平。引自《云南植被》中的“小果锥、截果柯群落”（云南植被编写组,
+1987）（EBLF书中表8-38∕1，曾称：深绿山龙眼/截果柯-小果锥群落）</p></li>
+<li><p>(C8) 大叶黑桫椤-云南柿/罗浮锥-截果柯群落（<em>Alsophila
+gigantea</em>-<em>Diospyros yunnanensis</em>/<em>Castanopsis
+fabri</em>-<em>Lithocarpus truncates</em> Comm.）</p>
+<p>分布于西畴、麻栗坡、马关。引自《云南植被》中的“罗浮栲、杯状栲（枹丝锥）、截果石栎群落”(<em>Castanopsis
+fabri</em>、<em>Castanopsis calathiformis</em>、<em>Lithocarpus
+truncates</em>) （云南植被编写组，1987）（EBLF书中表8-38∕2，曾称:
+云南柿/截果柯- 罗浮锥群落）</p></li>
 </ul>
 </div>
 </div>
