--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
 
 
 
-<title> </title>
+<title>Vegetation data for plant associations and communities (群丛和群落表)</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -272,24 +272,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
+<h1 class="title toc-ignore">Vegetation data for plant associations and
+communities (群丛和群落表)</h1>
 
 </div>
 
 
-<div
-id="vegetation-data-for-plant-associations-and-communities-群丛和群落表"
-class="section level3">
-<h3><span style="color: blue;">Vegetation data for plant associations
-and communities (群丛和群落表)</span></h3>
-<p><br></p>
-<div id="注本数据库仍在进一步更新中" class="section level4">
-<h4><span style="color: red;">注：本数据库仍在进一步更新中</span></h4>
-</div>
-<div id="note-we-still-need-some-tiome-to-update-the-data"
+<p><br> #### <span
+style="color: red;">注：本数据库仍在进一步更新中</span></p>
+<div id="note-we-still-need-some-time-to-update-the-data."
 class="section level4">
-<h4><span style="color: red;">NOTE: We still need some tiome to update
-the data</span></h4>
+<h4><span style="color: red;">NOTE: We still need some time to update
+the data.</span></h4>
 <p><br></p>
 </div>
 <div id="部分信息请访问本链接" class="section level4">
@@ -301,9 +295,17 @@ class="section level4">
 <h4>A small part of the data can be found <a
 href="https://github.com/eblfChina/eblfChina.github.io/tree/main/DataAlliance">HERE</a></h4>
 <p><br></p>
+</div>
+<div
+id="所有数据正在整合到givd数据库as-cn-006all-data-are-parts-of-the-dataset-vegetation-archive-of-subtropical-and-tropical-regions-in-china-vast-china."
+class="section level4">
+<h4>所有数据正在整合到GIVD数据库(AS-CN-006)。All data are parts of the
+dataset “Vegetation Archive of Subtropical and Tropical Regions in
+China” <a
+href="http://www.givd.info/ID/AS-CN-006">(VAST-China)</a>.</h4>
+<p><br></p>
 <p><img src="Pictures/AllianceData_snapshot.jpg" /></p>
 <p><br></p>
-</div>
 </div>
 
 <!DOCTYPE html>
