--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title> </title>
+<title>常绿阔叶林的全球分布及其重要性</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -272,12 +272,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
+<h1 class="title toc-ignore">常绿阔叶林的全球分布及其重要性</h1>
 
 </div>
 
 
-<p>北半球北纬25°-35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内。</p>
+<p><br>
+北半球北纬25°-35°之间的中纬度地带，在副热带高压和热带气旋影响下，大部分地区炎热干旱，大部区域分布的是荒漠和半荒漠，而我国在这一纬度地区，在季风气候影响下，发育着一种独特的植被类型——“常绿阔叶林”。常绿阔叶林的物种多样性仅次于热带雨林，是地球上重要的基因库。以我国为例，常绿阔叶林中维管束植物的种类不少于10000种，全国11个陆地生物多样性保护关键区域，一半位于常绿阔叶林分布区内。</p>
 <p><img src="Pictures/EBLF_Map_Global_SongBook_Page9.jpg" /></p>
 <center>
 常绿阔叶林的全球分布（Source: 宋永昌《中国常绿阔叶林》）
@@ -294,6 +295,19 @@ $(document).ready(function () {
 <center>
 浙江天童寺及其周围的常绿阔叶林景观（Source: 杨庆松）
 </center>
+<hr>
+<p><span style="color:red;">
+<em>“当人们寻求生物资源，并为生物多样性丧失而忧伤的时候，关注的重点是热带雨林；当人们为荒漠扩张、生态环境恶化而恐慌的时候，更多关注的是荒漠和草原。要知道常绿阔叶林生物多样性也很丰富，其分布区域人口密集，长期的人类活动对常绿阔叶林的消耗和破坏产生的资源和环境问题也很严重，在关注生物多样性保护和防治生态环境恶化时不能忽视常绿阔叶林。对现存的这种我国独特的植被类型进行系统研究，不仅有利于生物多样性的保护，而且也有利于生态环境的改善，对地区的可持续发展具有重要意义。”
+</em></span></p>
+<p><span style="color:blue;"><em>—
+宋永昌《中国常绿阔叶林》第15页（2013）</em> </span></p>
+<p><br></p>
+<p><span style="color:red;">
+<em>“从现有的事实看，生物是在一定的时期，一定的地区生态系统中发生和演化的，被子植物和它相关的高等动物都是以常绿阔叶树种为主的常绿阔叶林，特别是热带、亚热带山区发生和发展演化。……
+热带山地、亚热带常绿阔叶林的研究不仅对现在的生态系统保护和发展有重要意义，将来很可能在人类’上天’的时候，也要用这些科学资料。”
+</em></span></p>
+<p><span style="color:blue;"><em>—
+吴征镒院士为哀牢山森林生态系统研究站题词（2002）</em></span></p>
 <p><br></p>
 
 <!DOCTYPE html>
