--- a/reference.html
+++ b/reference.html
@@ -11,7 +11,7 @@
 
 
 
-<title> </title>
+<title>部分参考文献</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">常绿阔叶林</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -272,39 +272,37 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore"> </h1>
+<h1 class="title toc-ignore">部分参考文献</h1>
 
 </div>
 
 
 <ul>
+<li><p>Song Y.C., Wang X.H., Yan E.R. 2013. Evergreen forest in China:
+Classification Ecology Conservation, Science Press, Beijing. 801p. (in
+Chinese). [宋永昌, 王希华, 阎恩荣. 2013.
+中国常绿阔叶林-分类，生态，保育. 北京：科学出版社，801+558页.]</p></li>
+<li><p>Song K., Zhang J., Yan E.R., Wang X.H., Song, Y.C. EcoFloVCS: An
+eco-physiognomic-floristic vegetation classification system. Applied
+Vegetation Science, 27(4): e70005. <a
+href="https://doi.org/10.1111/avsc.70005">doi:10.1111/avsc.70005</a></p></li>
+<li><p>Song Y.C. 2004. Tentative Classification Scheme of Evergreen
+Broad-leaved forests of China. Acta Phytoeclogica Sinica, 28(4):435-448
+( in Chinese).[宋永昌. 2004. 中国常绿阔叶林分类试行方案 植物生态学报,
+28(4): 435-448.]</p></li>
 <li><p>宋永昌.1994.
 关于常绿阔叶林名称和类型划分的问题.（见：姜恕、陈昌笃主编：植被生态学研究.
 北京:科学出版社. p.189-199</p></li>
 <li><p>宋永昌，徐国士，陈伟烈，王希华，达良俊，陈添财. 2003.
 台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, ,27 (6):
 719-732.</p></li>
-<li><p>宋永昌, 王祥荣. 1995. 浙江天童国家森林公园的植被和区系.
-上海:上海科学技术文献出版社</p></li>
-<li><p>宋永昌, 徐国士，陈伟烈，王希华，达良俊，陈添财. 2003.
-台湾常绿阔叶林主要类型及其与大陆常绿阔叶林的关系. 植物生态学报, ,27 (6):
-719-732.</p></li>
-<li><p>宋永昌. 2004. 中国常绿阔叶林分类试行方案 植物生态学报, 28(4):
-435-448. Song Yong-Chang. 2004. Tentative Classification Scheme of
-Evergreen Broad-leaved forests of China, Acta Phytoeclogica Sinica,
-28(4):435-448 ( in Chinese with English abstract).</p></li>
 <li><p>宋永昌. 2011. 对中国植被分类系统的认知和建议. 植物生态学报, ,35
 (8): 882-892.</p></li>
-<li><p>宋永昌, 王希华, 阎恩荣. 2013. 中国常绿阔叶林-分类，生态，保育.
-北京：科学出版社，801+558页. Song, Y C , Wang X H, Yan E R. 2013.
-Evergreen forest in China: Classification Ecology Conservation, Science
-Press, Beijing. 801p. (in Chinese)</p></li>
 <li><p>宋永昌, 阎恩荣, 宋坤. 2017. 再议中国的植被分类系统. 植物生态学报,
 , 41 (2): 269-278.</p></li>
-<li><p>宋永昌. 2017.
-植被生态学（2版），北京：高等教育出版社，697页</p></li>
 </ul>
-<p><img src="Pictures/EBLF-Book.png" /></p>
+<hr>
+<p><img src="Pictures/EBLF%20book%20and%20EcoFloVCS.png" /></p>
 
 <!DOCTYPE html>
 
