--- a/Alli-1a14.html
+++ b/Alli-1a14.html
@@ -277,146 +277,90 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="四川大头茶-栲-湖北锥群团" class="section level2">
+<h2><span style="color: blue;">四川大头茶-栲-湖北锥群团</span></h2>
 </div>
 <div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+id="polyspora-speciosa-castanopsis-fargesii-castanopsis-hupehensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
-<hr>
+<h2><span style="color: darkblue;"><em>Polyspora
+speciosa</em>-<em>Castanopsis fargesii</em>-<em>Castanopsis
+hupehensis</em> All.</span></h2>
+<p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>短刺米槠、栲树、四川大头茶，它们可混生，也可分别成为单优种群落</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：粉叶新木姜子（<em>Neolitsea aurata</em> var.
+<em>glauca</em>）、日本杜英（<em>Elaeocarpus
+japonicus</em>）、网脉山龙眼（<em>Helicia
+reticulata</em>）、银木荷（<em>Schima
+argentea</em>）、五列木（<em>Pentaphylax euryoides</em>）</p></li>
+<li><p>灌木层：榕叶冬青（<em>Ilex
+ficoidea</em>）、光叶山矾（<em>Symplocos
+lancifolia</em>）、四川山矾（<em>Symplocos
+setchuensis</em>）、江南越桔（<em>Vaccinium
+mandarinorum</em>）、矩圆叶鼠刺（<em>Itea
+oblonga</em>）、瑞木（<em>Corylopsis
+multiflora</em>）、云南粗叶木（<em>Lasianthus henryi</em>）</p></li>
+<li><p>草本层：狗脊（<em>Woodwardia japonica</em>），百两金（<em>Ardisia
+crispa</em>），草珊瑚（<em>Sarcandra glabra</em>），山姜（<em>Alpinia
+japonica</em>）</p></li>
+<li><p>藤本植物：香花崖豆藤（<em>Millettia
+dielsiana</em>），钝药野木瓜（<em>Stauntonia leucantha</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含9个群落" class="section level3">
+<h3>目前包含9个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
+<li><p>(C1）苦竹-马银花-四川大头茶/短刺米槠群落 (<em>Pleioblastus</em>
+-<em>Rhododendron ovatum</em>-<em>Gordonia
+acuminata</em>/<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
+Comm.)</p>
+<p>分布在重庆江津县四面山（EBLF书中表5-88/1；曾称：马银花-四川大头茶/短刺米槠群落)</p></li>
+<li><p>(C2) 四川蒲桃-粉叶新木姜/银木荷-短刺米槠群落(<em>Syzygium
+szechuanense</em>-<em>Neolitsea aurata</em> var.
+<em>glauca</em>/<em>Schima argenta</em> -<em>Castanopsis carlesii</em>
+var. <em>spinulosa</em> Comm.)</p>
+<p>分布在重庆江津县四面山（EBLF书中表5-88/2；曾称：粉叶新木姜/银木荷-短刺米槠群落)</p></li>
+<li><p>(C3) 粉叶新木姜/马尾松-四川大头茶群落(<em>Neolitsea aurata</em>
+var. <em>glauca</em>/<em>Pinus massoniana</em>-<em>Gordonia
+acuminata</em> Comm.)</p>
+<p>分布在重庆缙云山（EBLF书中表5-89；曾称：粉叶新木姜/四川大头茶群落)</p></li>
+<li><p>(C4) 小花红苞木/木荷-短刺米槠群落(<em>Rhodoleia
+parvipetala</em>/<em>Schima superba</em>-<em>Castanopsis carlesii</em>
+var. <em>spinulosa</em> Comm.)</p>
+<p>分布在贵州茂兰立化（EBLF书中表5-90），曾称：小花红花荷/扁刺锥群落)</p></li>
+<li><p>(C5）东方乌毛蕨-云南粗叶木/短刺米槠群落（<em>Blechnum
+orientale</em>- <em>Lasianthus henryi</em>/<em>Castanopsis carlesii</em>
+var. <em>spinulosa</em> Comm.）</p>
+<p>引自：《广西植被志要》（王献溥等，2014）</p></li>
+<li><p>(C6) 纤细半蒴苣薹-薄果猴欢喜/短刺米槠-栲树群落（<em>Hemiboea
+gracilis</em>-<em>Sloanea leptocarpa</em>/<em>Castanopsis carlesii</em>
+var. <em>spinulosa</em>-<em>Castanopsis fargesii</em> Comm.）</p>
+<p>分布在重庆缙云寺，（EBLF书中表5-56/1），曾称：四川山矾
+/短刺米槠-栲树群落)</p></li>
+<li><p>(C7) 落地梅-茜草树/短刺米槠 -栲树群落（<em>Lysimachia
+paridiformis</em>-<em>Aidia cochinchinensis</em>/<em>Castanopsis
+carlesii</em> var. <em>spinulosa</em>-<em>Castanopsis fargesii</em>
 Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<p>分布在重庆高观音（EBLF书中表5-56/2），曾称四川山矾
+/短刺米槠-栲树群落)</p></li>
+<li><p>(C8) 樟树/杉木-栲树群落（<em>Cinnamomum
+camphora</em>/<em>Cunninghamia lanceolata</em>-<em>Castanopsis
+fargesii</em>-<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
+Comm.）</p>
+<p>分布在重庆青城山（EBLF书中表5-63），曾称：青城山栲树林)</p></li>
+<li><p>(C9）川桂/杉木-栲树群落（<em>Cinnamomum
+camphora</em>/<em>Cunninghamia lanceolata</em>-<em>Castanopsis
+fargesii</em>-<em>Castanopsis carlesii</em> var. <em>spinulosa</em>
+Comm.）</p>
+<p>分布在重庆音（EBLF书中表5-62），曾称：三峡库区栲树群落)</p></li>
 </ul>
 </div>
 </div>
