--- a/Alli-2a35.html
+++ b/Alli-2a35.html
@@ -277,146 +277,117 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="厚壳桂-锥-红锥群团" class="section level2">
+<h2><span style="color: blue;">厚壳桂-锥-红锥群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+<div id="cryptocarya-chinensis-castanopsis-chinensis-c.-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
-<hr>
+<h2><span style="color: darkblue;"><em>Cryptocarya
+chinensis</em>-<em>Castanopsis chinensis</em>-<em>C. hystrix</em>
+All.</span></h2>
+<p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>红锥（<em>Castanopsis hystrix</em>）、锥树（<em>C.
+chinesis</em>）、厚壳桂(<em>Cryptocarya
+chinensis</em>)、黄果厚壳桂(<em>C. concina</em>)，它们也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：黄杞（<em>Engelhardtia
+roxburghiana</em>）、鹅掌柴（<em>Schefflera
+octophylla</em>）、笔罗子（<em>Meliosma rigida</em>）</p></li>
+<li><p>灌木层：罗伞树（<em>Ardisia
+quinquegona</em>）、九节木（<em>Psychotria
+rubra</em>）、柏拉木（<em>Blastus
+cochinchinensis</em>）、草珊瑚（<em>Sarcandra glabra</em>）</p></li>
+<li><p>草本层：金狗毛（<em>Cibotium
+barometz</em>）、东方乌毛蕨（<em>Blechnum
+orientale</em>）、淡竹叶(<em>Lophatherum
+gracile</em>)、狗脊(<em>Woodwardia japonica</em>)，山姜（<em>Alpinia
+chinensis</em>）、扇叶铁线蕨（<em>Adiantum flabellulatum</em>）</p></li>
+<li><p>藤本植物：瓜馥木（<em>Fissistigma
+oldhamii</em>）、香花崖豆藤(<em>Millettia
+dielsiana</em>)、酸藤子（<em>Embelia
+laeta</em>）、玉叶金花（<em>Mussaenda pubescens</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含1个群丛17个群落" class="section level3">
+<h3>目前包含1个群丛，17个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
+<li><p>(A1）中华复叶耳蕨-柏拉木/鹿角锥-红锥群丛（<em>Arachniodes
+chinensis</em>-<em>Blastus cochinchinensis</em>/<em>Castanopsis
+lamontii</em>-<em>Castanopsis hystrix</em> Ass.）</p>
+<p>分布在广东英德滑水山。引自：《广东英徳滑水山的植物群落》中“红栲（红锥）＋青栲（鹿角锥）＋荷树群落”（徐祥浩等，1958）（EBLF书中表8-4;曾称：柏拉木-鹿角锥/红锥群落）</p></li>
+<li><p>(C1）华里白-面杆竹-鹅掌柴/红锥群落（<em>Hicriopteris
+chinensis</em>-<em>Pseudosasa orthotropa</em>-<em>Schefflera
+octophylla</em>/<em>Castanopsis hystrix</em> Comm.）</p>
+<p>分布在福建南靖、华安。引自：《福建省南靖南亚热带雨林自然保护区科学考察报告》中
+“红栲（红锥）＋甜槠－面杆竹-鹅掌柴-华里白群丛”（林鹏，1999.）（EBLF书中表8-3，曾称：面杆竹-鹅掌柴/红锥群落）</p></li>
+<li><p>(C2）金毛狗-罗伞树-狭叶泡花树/红锥群落（<em>Cibotium
+barometz</em>-<em>Ardisia quinquegona</em>-<em>Meliosma
+angustifolia</em>/<em>Castanopsis hystrix</em> Comm.）</p>
+<p>分布在广西靖西。引自：《亚热带常绿阔叶林生态系统》中“刺栲林”的（王献溥，黄建辉，2005）（EBLF书中表8-5；曾称：罗伞树-狭叶泡花树/红锥群落）</p></li>
+<li><p>(C3) 单叶新月蕨-九节木-鹅掌柴/红楠-厚壳桂群落（<em>Pronephrium
+simplex</em>-<em>Psychotria rubra</em>-<em>Schefflera
+octophylla</em>/<em>Machilus thunbergii</em>-<em>Cryptocarya
+chinensis</em> Comm.）</p>
+<p>分布在福建安溪。引自：《福建植被》中“厚壳桂+红楠-九节木-单叶新月蕨群丛”（林鹏，1990）（EBLF书中表8-7，曾称：鹅掌柴-九节木/红楠-厚壳桂群落</p></li>
+<li><p>(C4) 猴耳环-鹅掌柴/乌榄-厚壳桂群落（<em>Pithecellobium
+clypearia</em>-<em>Schefflera octophylla</em>/<em>Canarium
+pimela</em>-<em>Cryptocarya chinensis</em> Comm.）</p>
+<p>分布在广东深圳。引自：《广东南亚热带低山丘陵的主要常绿阔叶类型》中“厚壳桂、猴耳环、匙叶楠、鸭脚木（鹅掌柴）林”（杨远攸，1985）（EBLF书中表8-8；曾称：鹅掌柴-猴耳环/乌榄-厚壳桂群落）</p></li>
+<li><p>(C5) 髯毛箬竹-四角柃/绢毛杜英-黄果厚壳桂群落（<em>Indocalamus
+barbatus</em>-<em>Eurya tetragonoclada</em>/<em>Elaeocarpus
+nitendifolia</em>-<em>Cryptocarya concinna</em> Comm.）</p>
+<p>分布在广西桂平。引自：引自：《亚热带常绿阔叶林生态系统》中
+“黄果厚壳桂林”（王献溥，黄建辉，2005）（EBLF书中表8-9，曾称：）</p></li>
+<li><p>(C6) 红叶藤-大节竹/锥树-红锥群落（<em>Santaodes
+microphyllum</em>-<em>AIndosasa crassiflora</em>/<em>Castanopsis
+chinensis</em>-<em>Castanopsis hystrix</em> Comm.）</p>
+<p>分布在广西容县大王十里。引自：《广西植被志要》中“？？？？表5-269-270；271-272”（王献溥，2014）</p></li>
+<li><p>(C7) 大叶仙茅-罗伞树/锥树-红锥群落（<em>Curculigo
+capitulata</em>-<em>Ardisia quinquegona</em>/<em>Castanopsis
+chinensis</em>-<em>Castanopsis hystrix</em> Comm.）</p>
+<p>分布在广西容县松山。引自：《广西植被志要》中“
+？？？？”书中表5.267-268（王献溥，2014）</p></li>
+<li><p>(C8）沙皮蕨-鼎湖钓樟/锥树-厚壳桂群落（<em>Hemigramma
+decurrens</em>-<em>Lindera chunii</em>/<em>Castanopsis
+chinensis</em>+<em>Cryptocarya concinna</em> Ass.）</p>
+<p>分布在广东高要鼎湖山。引自：《鼎湖山自然保护区的植被》中“锥栗（锥树）、荷木、厚壳桂群落”（王铸豪等，1982）（EBLF书中表8-6；曾称：红枝蒲桃-黄果厚壳桂/锥树群落）</p></li>
+<li><p>(C9) 光叶山黄皮-鼎湖钓樟/黄果厚壳桂-格木群落（<em>Randia
+canthioides</em>-<em>Lindera chunii</em>/<em>Cryptocarya
+concinna</em>-<em>Erythrophleum fordii</em> Comm.）</p>
+<p>分布在广东高要鼎湖山。引自：《鼎湖山格木群落的组成种类和结构特征》中“格木群落”
+（蚁伟民等. 1999)
+（EBLF书中表8-10，曾称：鼎湖钓樟/黄果厚壳桂-格木群落）</p></li>
+<li><p>(C10）锦香草-四角柃/黄果厚壳桂群落（<em>Phyllagathis
+cavaleriei</em>-<em>Eurya tetragonoclada</em>/<em>Cryptocarya
+concinna</em> Comm.）</p>
+<p>广西桂平太平山。引自：《广西植被志要》（王献溥 等，2014）</p></li>
+<li><p>(C11）沙罗单竹/锥树群落（<em>Schizostachuium
+funghomii</em>/<em>Castanopsis chinensis</em> Comm.）</p>
+<p>分布在广西容县自良；引自：《广西植被志要》（表5：171-172，原称：锥栗栲-罗伞树-淡竹叶群丛）</p></li>
+<li><p>(C12）凤尾蕨-红背山麻杆/黄果厚壳桂-锥树群落（<em>Pteris
+multifida</em>-<em>Alchornea trewiotdes</em>/<em>Cryptocarya
+concinna</em>-<em>Castanopsis chinensis</em> Comm.）</p>
+<p>分布在广西容县水井 引自：《广西植被志要》（表5：
+5.169-170，原称：锥栗栲-罗伞树-东方乌毛蕨群丛）</p></li>
+<li><p>(C13）白茅-千年桐/锥树群落（<em>Imperata
+cylindrica</em>-<em>Vercinia montana</em>/<em>Castanopsis chinensis</em>
 Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<p>分布在广西
+引自：《广西植被志要》（表5：167-168，原称：锥栗栲-千年桐-九节木-黑莎草群丛）</p></li>
+<li><p>(C14）山菅兰-岗松/锥树群落（<em>Dianella ensifolia</em>-
+<em>Baeckea frutescens</em>/<em>Castanopsis chinensis</em> Comm.）</p>
+<p>分布在广西容县杨杨村，引自：《广西植被志要》（表5：173-174原称：锥栗栲-桃金娘-芒萁群丛）</p></li>
+<li><p>(C15）阔叶楼梯草-罗伞树/黄果厚壳桂群落（<em>Elatostema
+platyphyllum</em>-<em>Ardisia quinquegona</em>/<em>Cryptocarya
+chinensis</em> Comm.）</p>
+<p>分布在广滑水冲。引自：《广西植被志要》中“黄果厚壳桂-罗伞树+九节木-阔叶楼梯草群丛”书中表：5.209-210（王献溥，2014）</p></li>
 </ul>
 </div>
 </div>
