--- a/Alli-2a36.html
+++ b/Alli-2a36.html
@@ -277,146 +277,85 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="大果马蹄荷-黏木-蕈树群团" class="section level2">
+<h2><span style="color: blue;">大果马蹄荷-黏木-蕈树群团</span></h2>
 </div>
 <div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+id="exbucklandia-tonkinensis-ixonanthes-reticulata-liquidambar-altingia-chinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
-<hr>
+<h2><span style="color: darkblue;"><em>Exbucklandia
+tonkinensis</em>-<em>Ixonanthes reticulata</em>-<em>Liquidambar</em>
+(<em>Altingia</em>) <em>chinensis</em> All.</span></h2>
+<p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>蕈树、大果马蹄荷、粘木，它们同时也可作为鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：黄果厚壳桂（<em>Cryptocarya
+concinna</em>）、黑叶锥（<em>Castanopsis
+nigrescens</em>）、二色波罗蜜（<em>Artocarpus
+styracifolius</em>）、木荷（<em>Schima
+superba</em>）、米槠（<em>Castanopsis
+carlesii</em>）、光叶红豆（<em>Ormosia
+glaberrima</em>）、黄叶树（<em>Xanthophyllum hainanense</em>）</p></li>
+<li><p>灌木层：杜茎山（<em>Maesa japonica</em>）、柏拉木（<em>Blastus
+cochinchinensis</em>）、草珊瑚（<em>Sarcandra
+glabra</em>）、赤楠（<em>Syzygium
+buxifolium</em>）、林仔竹（<em>Oligostachyum
+nuspiculum</em>），多数样地未见记录</p></li>
+<li><p>草本层：狗脊（<em>Woodwardia
+japonica</em>）、光里白（<em>Hicriopteris
+laevissima</em>）、赤竹一种（<em>Sasa</em> sp.）、十字薹草（<em>Carex
+cruciata</em>）</p></li>
+<li><p>藤本植物：大样酸藤子（<em>Embelia
+rudis</em>）、牛老药藤（<em>Thysanospermum
+diffusum</em>）、藤黄檀（<em>Dalbergia
+hancei</em>）、菝葜一种（<em>Smilax</em> sp.）</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含8个群落" class="section level3">
+<h3>目前包含8个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
-Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<li><p>(C1）黄叶树-二色波罗蜜/粘木-蕈树群落（<em>Xanthophyllum
+hainanense</em>-<em>Artocarpus styracifolius</em>/<em>Altingia
+chinensis</em>+<em>Ixonanthes chinensis</em> Ass.）</p>
+<p>分布在广东封开黑石顶。是由：《黑石顶自然保护区植被分类系统和主要类型及分布》中①“阿丁枫（蕈树）＋粘木＋荷树－青兰（黄叶树）－密花树＋生虫树（黄果厚壳桂）群落”和②“阿丁枫＋小叶胭脂（二色波罗蜜＋硬叶椆－陈氏钓樟＋生虫树－罗伞－省藤群落）”（刘雄恩，王伯荪．1987），以及《封开县黑石顶自然保护区的森林群落》中③“阿丁枫+小叶胭脂+福建青冈+黄杞-陈氏钓樟+广东润楠-华南省藤群落”（马曼杰，1982）的综合（EBLF书中表8-11∕1-3，曾称：黄叶树-二色波罗蜜/粘木-蕈树群落）</p></li>
+<li><p>(C2）光叶红豆/米槠-蕈树群落（<em>Ormosia
+glaberrima</em>/<em>Castanopsis carlesii</em>-<em>Altingia
+chinensis</em> Comm.）</p>
+<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“米锥+荷树+甜茶椆-桂北木姜+阿丁枫-生虫树-省藤群落”和“水栗+
+粘木-阿丁枫+光叶红豆-生虫树-罗伞-省藤群落，以及“米锥-阿丁枫+岭南槭+光叶红豆+显脉新木姜-苦竹群落”
+（刘雄恩，王伯荪．1987）的综合（EBLF书中表8-11∕4-6，曾称：光叶红豆∕米槠-蕈树群落）</p></li>
+<li><p>(C3) 合柱金莲木/大果马蹄荷群落（<em>Sinia
+rhodoleuca</em>/<em>Exbucklandia tonkinensis</em> Comm.）</p>
+<p>分布在广东封开黑石顶。引自：《黑石顶自然保护区植被分类系统和主要类型及分布》中“马蹄荷-桂北木姜子+陈氏钓樟-线齿木”（刘雄恩，王伯荪．1987）（EBLF书中表8-11∕7，曾称：合柱金莲木/大果马蹄荷群落）</p></li>
+<li><p>(C4) 林仔竹-赤竹/蕈树-大果马蹄群落 (<em>Oligostachyum
+nuspiculum</em>-<em>Sasa</em> sp./<em>Altingia
+chinensis</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
+<p>分布在广东乳源天井山。引自：“红椽（栲树）、大果马蹄群落”（广东植物研究所，1976）（EBLF书中表8-12，曾称：林仔竹/蕈树-大果马蹄群落）</p></li>
+<li><p>(C5) 光里白-柏拉木/鹿角锥-大果马蹄荷群落(<em>Hicriopteris
+laevissima</em>-<em>Blastus cochinchinensis</em>/<em>Castanopsis
+lamontii</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
+<p>分布在湖南八面山，江西井冈山。引自：《湖南植被》中“红钩锥（鹿角锥）、大果马蹄荷林”
+（祁承经，1990）和《江西森林》“狗脊-柏拉木-大果马蹄荷林型”
+（江西森林编委会，1986）（EBLF书中表8-13，曾称：柏拉木∕鹿角锥-大果马蹄荷群落）</p></li>
+<li><p>(C6) 沿阶草-上思粗叶木/蕈树-大果马蹄荷群落(<em>Ophiopogon
+bodinieri</em>-<em>Lasianthus tsiangii</em>/<em>Altingia
+chinensis</em>-<em>Exbucklandia tonkinensis</em> Comm.)</p>
+<p>分布在广西上思南屏，引自：《广西植被志要》（表5：281/282，原称：大果马蹄荷-打铁树-野锦香-山姜群丛）</p></li>
+<li><p>(C7) 金竹-网脉山龙眼/蕈树群落（<em>Phyllostachys
+sulphurea</em>-<em>Helicia reticulata</em>/<em>Altingia chinensis</em>
+Comm.)</p>
+<p>分布在广西贺县姑婆山，引自：《广西植被志要》（5：275/276；277-278，原称：半边枫-网脉山龙眼-金竹-狗脊群丛；半边枫-鳞毛蚊母树-野锦香-狗脊群丛）</p></li>
+<li><p>(C8）裂叶秋海棠-广西茵芋-西藏山茉莉/蕈树群落（<em>Begonia
+laciniata</em>-<em>Skimmica kwangsiensis</em>-<em>Houdendron
+tibeticum</em>/<em>Altingia chinensis</em>）</p>
+<p>分布在广西上思南屏引自：《广西植被志要》（5：279-280，原称：半边枫（蕈树）-杨桐-野锦香-镰叶瘤足蕨群丛）</p></li>
 </ul>
 </div>
 </div>
