--- a/Alli-3a57.html
+++ b/Alli-3a57.html
@@ -277,146 +277,84 @@ $(document).ready(function () {
 </div>
 
 
-<div id="苦槠-柯-青冈群团" class="section level2">
-<h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
+<div id="山棕-菲律宾榕-长叶润楠大叶润楠群团" class="section level2">
+<h2><span
+style="color: blue;">山棕-菲律宾榕-长叶润楠(大叶润楠)群团</span></h2>
 </div>
-<div
-id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
+<div id="arenga-engleri-ficus-ampelos-machilus-japonica-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis
-sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
-<p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
-<center>
-大金山常绿阔叶林外貌（Source: EBLF）
-</center>
+<h2><span style="color: darkblue;"><em>Arenga engleri</em>-<em>Ficus
+ampelos</em>-<em>Machilus japonica</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>青冈(<em>Quercus glauca</em>)、苦槠(<em>Castanopsis
-sclerophylla</em>)、柯(<em>Lithocarpus glaber</em>)</p>
+<p>除大叶楠（<em>Machilus kusanoi</em>）、数种榕属植物（糙叶榕<em>Ficus
+irisana</em>，稜果榕<em>F. septica</em>，水同木<em>F. Fistulosa</em>,
+菲律宾榕<em>F. Ampelas</em>，岛榕<em>F.
+Virgata</em>）外，还有山棕（<em>Arenga
+engleri</em>），以及三叶山香圆（<em>Turpinia
+ternata</em>）、台湾山香圆（<em>Turpinia
+formosana</em>），墨鳞（<em>Melanolepis
+multiglandulosa</em>）、樟树(<em>Cinnamomum
+camphora</em>)、菜豆树（<em>Melanolepis
+multiglandulosa</em>），其中大叶楠、糙叶榕、山棕又是鉴别种。</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：冬青（<em>Ilex chinensis</em>）、女贞（<em>Ligustrum
-lucidum</em>）、黄檀（<em>Dalbergia hupeana</em>）、白栎（<em>Quercus
-fabri</em>）、黄连木（<em>Pistacia chinensis</em>）</p></li>
-<li><p>灌木层：杜鹃（<em>Rhododendron simsii</em>）、白檀（<em>Symplocos
-paniculata</em>）、檵木（<em>Loropetalum
-chinense</em>）、南烛（<em>Vaccinium
-bracteatum</em>）、大青（<em>Clerodendrum
-cyrtophyllum</em>）、豆腐柴（<em>Premna
-microphylla</em>）、乌药(<em>Lindera aggregata</em>)、栀子(<em>Gardenia
-jasminoides</em>)、白马骨(<em>Serissa
-serissoides</em>)、枸骨冬青（<em>Ilex cornuta</em>）</p></li>
-<li><p>草本层：山麦冬（<em>Liriope spicata</em>）、麦冬(<em>Ophiopogon
-japonicus</em>)、狗脊(<em>Woodwardia
-japonica</em>)、淡竹叶(<em>Lophatherum
-gracile</em>)、紫金牛（<em>Ardisia japonica</em>）</p></li>
-<li><p>藤本植物：海金沙（<em>Lygodium
-japonicum</em>）、牛奶子（<em>Elaeagnus
-umbellata</em>）、薜荔（<em>Ficus pumila</em>），以及菝葜(<em>Smilax
-china</em>)、络石(<em>Trachelospermum jasminoides</em>)</p></li>
+<li><p>乔木层：台湾榕（<em>Ficus
+formosana</em>），南紫薇（<em>Lagerstroemia
+subcostata</em>），鹅掌柴（<em>Schefflera octophylla</em>）</p></li>
+<li><p>灌木层：九节木（<em>Psychotria
+rubra</em>），台湾水东哥（<em>Saurauia tristyla</em> var.
+<em>oldhamii</em>），长梗紫麻（<em>Oreocnide
+pedunculata</em>），咬人狗（<em>Dendrocnide meyeniana</em>）</p></li>
+<li><p>草本层：海芋（<em>Alocasia
+macrorrhiza</em>）、艳山姜（<em>Alpinia
+zerumbet</em>）、狭叶楼梯草（<em>Elatostema lineolatum</em> var.
+<em>majus</em>），观音座莲（<em>Angiopteris lygodiifolia</em>）</p></li>
+<li><p>藤本附生植物是：黄藤（<em>Daemonorops
+margaritae</em>）、巢蕨（<em>Neottopteris
+nidus</em>）、石柑子（<em>Pothos chinensis</em>）、 风藤（<em>Piper
+kadsura</em>）、球兰（<em>Hoya carnosa</em>）等</p></li>
 </ul>
 <p><br></p>
 </div>
-<div id="目前包含11个群丛5个群落" class="section level3">
-<h3>目前包含11个群丛、5个群落</h3>
+<div id="目前包含2个群丛5个群落" class="section level3">
+<h3>目前包含2个群丛、5个群落</h3>
 <ul>
-<li><p>(A1) 篌竹-豆梨/青冈群丛（<em>Pyrus
-calleryana</em>-<em>Phyllostachys nidularia</em>∕<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于上海大金山（EBLF书中表5-4∕1-6；曾称：篌竹/ 青冈群落)</p></li>
-<li><p>(A2) 假黑鳞耳蕨-冬青/苦槠群丛（<em>Polystichum
-pseudo</em>-<em>makinoi</em>-<em>Ilex purpurea</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于苏州、上海附近丘陵地段（EBLF书中表5-8a；曾称：冬青/苦槠群落)</p></li>
-<li><p>(A3) 水竹-檵木/苦槠群丛（<em>Phyllostachys
-heteroclada</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em> Ass.）</p>
-<p>见于安徽黄山、贵池、歙县、旌德（EBLF书中表5-9a；曾称：檵木/苦槠群丛)</p></li>
-<li><p>(A4)
-刚竹-檵木/樟树-苦槠群丛（<em>Phyllostachys</em>-<em>Loropetalum
-chinense</em>/<em>Castanopsis sclerophylla </em>Ass.）</p>
-<p>见于江西庐山、南昌望城岗（EBLF书中表5-9b；曾称：檵木/苦槠群落)</p></li>
-<li><p>(A5) 斜方复叶耳蕨-檵木/青冈群丛（<em>Arachniodes
-rhomboidea</em>-<em>Loropetalum chinense</em>/<em>Cyclobalanopsis
-glauca</em> Ass.）</p>
-<p>见于安徽贵池、歙县、旌德；闽北（EBLF书中表5-5a；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A6) 阔叶十大功劳-豹皮樟/青冈-港柯群丛（<em>Mahonia
-bealei</em>-<em>Litsea coreana var. sinensis</em>/<em>Cyclobalanopsis
-glauca</em>-<em>Lithocarpus harlandii</em>Ass.）
-见于安徽黟县（EBLF书中表5-17；曾称：豹皮樟/港柯群丛）</p></li>
-<li><p>(A7) 金星蕨-檵木/青冈群丛（<em>Parathelypteris</em>
--<em>Loropetalum chinense</em>/<em>Cyclobalanopsis glauca</em>
-Ass.）</p>
-<p>见于安徽南部以及福建北部（EBLF书中表5-5b；曾称：檵木/苦槠群落）</p></li>
-<li><p>(A8) 华里白-檵木∕苦槠+青冈群丛（<em>Hicriopteris
-chinensis</em>-<em>Loropetalum chinense</em>/<em>Castanopsis
-sclerophylla</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽祁门繁昌；福建蒲城（EBLF书中表5-9c）(书中曾称：檵木/苦槠群落)</p></li>
-<li><p>(A9) 里白-绒毛润楠/青冈群丛（<em>Hicriopteris glauca</em>-
-<em>Machilus velutina</em>/<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于闽北武夷山、闽中永定；浙南；江西井冈山、铅山（表5-6）(曾称：绒毛润楠/青冈群丛)</p></li>
-<li><p>(A10) 垂珠花-檵木∕柯+青冈群丛（<em>Styrax
-dasyanthus</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus
-glaber</em>+<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于杭州午潮山（EBLF书中表5-11b；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(A11) 短梗冬青-檵木∕柯+青冈群丛（<em>Ilex
-buergeri</em>-<em>Loropetalum chinense</em>/<em>Lithocarpus glaber</em>+
-<em>Cyclobalanopsis glauca</em> Ass.）</p>
-<p>见于安徽贵池（EBLF书中表5-11a；曾称：檵木-乌药/柯群落)</p></li>
-<li><p>(C1) 白马骨-小叶石楠/栓皮栎-青冈群落（<em>Cyclobalanopsis
-glauca</em>+<em>Quercus variabilis</em>-<em>Photinia
-parvifolia</em>-<em>Serissa serissoides</em> Comm.）</p>
-<p>见于南京隆昌寺（EBLF书中表5-3∕1-2；曾称：白马骨/青冈群落)</p></li>
-<li><p>(C2) 丝穗金粟兰-冬青 /豺皮樟-苦槠群落（<em>Chloranthus
-fortunei</em>-<em>Ilex chinensis</em>/<em>Castanopsis sclerophylla</em>
-Comm.）</p>
-<p>见于上海佘山（EBLF书中表5-8b；曾称：冬青 /苦槠群落)</p></li>
-<li><p>(C3) 山姜-粗叶木/苦槠群落（<em>Alpinia
-japonica</em>-<em>Lasianthus chinensis</em>/<em>Litsea rotundifolia</em>
-var. <em>oblongifolia</em>-<em>Castanopsis sclerophylla</em> Comm.）</p>
-<p>见于江西井冈山。引自《中国植被》中的“苦槠、豺皮樟、红楠-苦竹、粗叶木-、狗脊群丛”
-（中国植被编辑委员会，1980），亦即《江西森林》中的“山姜＋狗脊-苦竹＋粗叶木-豺皮樟＋苦槠林型”
-（江西森林编委会，1986)
-（EBLF书中表5-10；曾称：粗叶木/苦槠群落)</p></li>
-<li><p>(C4) 蜘蛛抱蛋-针齿铁仔/栓叶安息香-青冈群落（<em>Vitex
-canescens</em>-<em>Myrsine semiserrata</em>/<em>Styrax suberifolia</em>
--<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南永顺县,引自《湖南植被》“青冈栎、红皮树（栓叶安息香）群落（<em>Cyclobalanopsis
-glauca</em>，<em>Styrax suberifolia</em>
-forest）”（祁承经,1990)（EBLF书中表5-7∕1；曾称：栓叶安息/青冈群落)</p></li>
-<li><p>(C5) 翅柃/厚皮香-青冈群落（<em>Eurya alata</em>/<em>Ternstroemia
-gymnanthera</em>-<em>Cyclobalanopsis glauca</em> Comm.）</p>
-<p>见于湖南桃园县。引自《湖南植被》
-“青冈栎、厚皮香群落”（<em>Cyclobalanopsis glauca</em>，<em>Ternstroemia
-gymnanthera</em> forest）（祁承经,1990)
-（EBLF书中表5-7∕2，曾称：厚皮香/青冈群落)。</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="附注" class="section level3">
-<h3>附注：</h3>
-<p>《广西植被》(苏宗明等，2014)
-中曾记录有以下三个群落，但未无样地记录表，附记如下：</p>
-<ul>
-<li><p>青冈-青冈-青冈-驳骨九节-三角眼凤尾蕨群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Cyclobalanopsis
-glauca</em>-<em>Cyclobalanopsis glauca</em>-<em>Psychotria
-prainii</em>-<em>Pteris</em> sp. Comm.</p></li>
-<li><p>青冈+黄杞-穗序鹅掌柴+黄杞-文山润楠-草珊瑚-孔药花群落</p>
-<p><em>Cyclobalanopsis glauca</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Schefflera delavayi</em>+<em>Engelhardtia
-roxburghiana</em>-<em>Machilus wenshanensis</em>-<em>Sarcandra
-glabra</em>-<em>Porandra ramosa</em> Comm.</p></li>
-<li><p>青冈-银木荷+青冈-银木荷-柏拉木+海南罗伞树-毛果珍珠茅群落</p>
-<p><em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>
-+<em>Cyclobalanopsis glauca</em>-<em>Schima argentea</em>-<em>Blastus
-cochinchinensis</em>+<em>Ardisia quinquegona</em>-<em>Scleria levis</em>
-Comm.</p></li>
+<li><p>(A1) 酸叶胶藤-肾蕨/山棕-大叶楠群丛 (<em>Ecdysanthera
+roseaNephrolepis auriculata</em>-<em>Lagerstroemia
+subcostata</em>/<em>Arenga engler</em>-<em>Machilus japonica</em> var.
+<em>kusanoi</em> Ass.）</p>
+<p>分布在南澳南溪，引自：称子英 1997
+《南澳南溪植物资源之调查》,（EBLF书中表9-19，曾称：南紫薇-鹅掌柴/三叶山香圆-大叶楠群落）</p></li>
+<li><p>(A2) 墨鳞/棱果榕-糙叶榕群丛（<em>Sphaeropteris
+lepifera</em>-<em>Melanolepis multiglandulosa</em>/<em>Ficus
+irisana</em>-<em>Ficus septica</em> Ass.）</p>
+<p>分布在台东海岸山脉，引自：陈明义等，1990.《台东海岸山脉自然保护区植群生态之调查》,（EBLF书中表9-16/1-3，曾称：糙叶榕-棱果榕优势度型群落）</p></li>
+<li><p>(C1) 狭叶楼梯草-咬人狗/樟树-糙叶榕群落（<em>Elatostema
+lineolatum</em>-<em>Dendrocnide meyeniana</em>/<em>Cinnamomum
+camphora</em>-<em>Ficus ampelas</em> Comm.）</p>
+<p>分布在福源森林游乐区，引自：宋永昌等，2003.《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》，（EBLF书中表9-15/1，曾称：狭叶楼梯草-咬人狗/樟树-糙叶榕群落）</p></li>
+<li><p>(C2) 狭叶楼梯草-咬人狗/菜豆树-糙叶榕群落（<em>Elatostema
+lineolatum</em>-<em>Dendrocnide meyeniana</em>/<em>Radermachera
+sinica</em>-<em>Ficus irisana</em> Comm.）</p>
+<p>分布在海岸山脉，引自：陈明义等，1990
+《台东海岸山脉自然保护区植群生态之调查》（EBLF书中表9-15/2，曾称：狭叶楼梯草-咬人狗/糙叶榕群落）</p></li>
+<li><p>(C3) 阔叶楼梯草-台湾山香圆-鹅掌柴/大叶楠群落
+(<em>Elatostema</em>-<em>Turpinia formosana</em>-<em>Schefflera
+octophylla</em>/<em>Machilus kusanoi</em> Comm.）</p>
+<p>分布在阳明山鹿角坑溪，引自：宋永昌等，2003.《台湾常绿阔叶林主要类型与大陆常绿阔叶林之关系》，（EBLF书中表9-20/1-2，曾称：台湾杨桐-鹅掌柴/大叶楠群落）</p></li>
+<li><p>(C4) 椭圆叶米仔兰/台湾樫木-大叶楠群落 (<em>Aglaia
+elliptifolia</em>/<em>Dysoxylum kusukusuense</em>-<em>Machilus
+kusanoi</em> Comm.）</p>
+<p>分布在垦丁南仁山，引自：苏鸿杰，苏中原，1988《垦丁国家公园植群之多变性分析》，（EBLF书中表9-18，曾称：椭圆叶米仔兰-鹅掌柴/大叶楠群落）</p></li>
+<li><p>(C5) 褐鳞木-假赤杨/水同木群群落（<em>Astronia
+ferruginea</em>-<em>Alniphyllum pterospermum</em>/<em>Ficus
+fistulosa</em> Comm.）</p>
+<p>分布在垦丁南仁山。引自：谢长富等，1992，《垦丁国家公园亚热带雨林永久样区之调查》，以及谢宗欣，1990.《南仁山亚热带雨林树种的组成和分布类型》（EBLF书中表9-17/1-2；曾称：褐鳞木-鹅掌柴/水同木群群落）</p></li>
 </ul>
 </div>
 </div>
